--- a/index.html
+++ b/index.html
@@ -2,17 +2,31 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Joes Hotdogs</title>
+<title>Data Visualization</title>
 <link rel="stylesheet" href="style.css">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 
 <body>
-<h1>
-    Assignment 1: Github Page
-</h1>
-
-This is the github page for Data Visualization. 
+    <div class="block">
+        <h1>
+            GSAPP 2022 Data Visualization
+        </h1>
+        
+        This is the github page for Data Visualization. 
+        
+        <ul>
+            <li>
+                <a href="Assignment1/submission.pdf">Assignment 1</a>
+            </li>
+            <li>
+                Assignment 2
+            </li>
+            <li>
+                Assignment 3
+            </li>
+        </ul>
+    </div>
 
 	
 </body>
