--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <ul>
             <li>
-                <a href="Assignment1/submission.pdf">Assignment 1</a>
+                <a href="Assignment1/submission.html">Assignment 1</a>
             </li>
             <li>
                 Assignment 2
