--- a/Assignment1/submission.html
+++ b/Assignment1/submission.html
@@ -41,7 +41,7 @@
 <h2 id="part-1">Part 1</h2>
 <p><a href="https://yuehandai.github.io/">https://yuehandai.github.io/</a></p>
 <h2 id="part-2">Part 2</h2>
-<p><img src="file:////Users/mac/Desktop/git/YuehanDai.github.io/Assignment1/tree.png" alt=""></p>
+<p><img src="tree.png" alt=""></p>
 
         
         
