Update Final DataV

--- a/index.html
+++ b/index.html
@@ -13,17 +13,15 @@
             GSAPP 2022 Data Visualization
         </h1>
         
-        This is the github page for Data Visualization. 
-        
         <ul>
             <li>
-                <a href="Assignment1/submission.html">Assignment 1</a>
+                <a href="FinalProject/sample.html">D3 Version</a>
             </li>
             <li>
-                Assignment 2
+                <a href="FinalProject/Calender API Year.html">Holiday This Year</a>
             </li>
             <li>
-                Assignment 3
+                <a href="FinalProject/Calender API Daily.html">Holiday Today</a>
             </li>
         </ul>
     </div>
